--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignorar la carpeta de compilación de Maven
+target/
+.vscode/
 # Compiled class file
 *.class
 
@@ -22,3 +25,8 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+.idea/
+*.iml
+*.class
+.DS_Store
